# floe

./: '  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  mix.exs
assets/: tailwind.config.js
assets/js/: app.js  rtc.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: floe.ex  floe_web.ex
lib/floe/: accounts.ex  application.ex  mailer.ex  registry.ex  release.ex  repo.ex  sfu.ex
lib/floe/accounts/: user.ex  user_notifier.ex  user_token.ex
lib/floe_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/floe_web/components/: core_components.ex  layouts.ex
lib/floe_web/controllers/: api_controller.ex  api_json.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex  user_session_controller.ex
lib/floe_web/live/: user_confirmation_instructions_live.ex  user_confirmation_live.ex  user_forgot_password_live.ex  user_login_live.ex  user_registration_live.ex  user_reset_password_live.ex  user_settings_live.ex
native/floe_sfu/: Cargo.toml  README.md
native/floe_sfu/src/: client.rs  lib.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20241126015806_create_users_auth_tables.exs
test/: test_helper.exs
test/floe/: accounts_test.exs
test/floe_web/: user_auth_test.exs
test/floe_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs  user_session_controller_test.exs
test/floe_web/live/: user_confirmation_instructions_live_test.exs  user_confirmation_live_test.exs  user_forgot_password_live_test.exs  user_login_live_test.exs  (+3 more)
test/support/: conn_case.ex  data_case.ex
(+4 files in other folders)
